# unified-re-mcp

./: AGENTS.md  README.md  UPGRADE_GUIDE.md  discord_bot.py  inject_mcp_configs.bat  inject_plugins.bat  install.bat  install_plugins.bat  main.py  nexusre_brain.db  pyproject.toml  requirements.txt  update_main.py
.github/workflows/: offset_updater.yml  release.yml
adapters/: base.py  binja.py  cheatengine.py  dma.py  gdb.py  ghidra.py  ida.py  kernel.py  x64dbg.py
core/: auto_session.py  memory.py  server.py  session.py
dashboard/: index.html  package-lock.json  package.json  server.py
dashboard/src/: App.jsx  index.css
plugins/binja/: binja_backend_plugin.py
plugins/ce/: ce_backend_plugin.lua
plugins/ghidra/: ghidra_backend_plugin.py
plugins/ida/: ida_backend_plugin.py
plugins/x64dbg/: x64dbg_backend_plugin.py
schemas/: models.py
tests/: test_adapters.py  test_server.py
