[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nexusre-mcp"
version = "0.1.0"
description = "Enterprise-grade MCP Server for Reverse Engineering and Game Hacking"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
  {name = "Homelycarlos", email = "homelycarlos@example.com"}
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "pydantic>=2.0.0",
    "aiohttp>=3.0.0",
    "aiosqlite>=0.19.0",
]

[project.optional-dependencies]
all = [
    "frida-tools>=12.0.0",
    "r2pipe>=1.5.0",
    "pymem>=1.13.0",
    "yara-python>=4.3.0",
    "keystone-engine>=0.9.2",
    "capstone>=5.0.0",
    "unicorn>=2.0.1",
    "PyGithub>=2.1.1",
]

[project.scripts]
nexusre-mcp = "main:main_cli"

[tool.hatch.build.targets.wheel]
packages = ["core", "adapters", "schemas"]
